[gd_scene load_steps=3 format=3 uid="uid://b2fxv28kesyln"]

[ext_resource type="Script" path="res://scenes/prostitution.gd" id="1_hqdcd"]
[ext_resource type="PackedScene" uid="uid://m47064cxfa3k" path="res://scenes/transitions.tscn" id="4_3f3aj"]

[node name="Prostitution" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hqdcd")

[node name="Transitions" parent="." instance=ExtResource("4_3f3aj")]
visible = false
layout_mode = 1

[node name="RandomClientBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 131.0
offset_top = 264.0
offset_right = 475.0
offset_bottom = 353.0
text = "Find a random client"

[node name="SpecialEventsBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 131.0
offset_top = 390.0
offset_right = 475.0
offset_bottom = 479.0
text = "Special events"

[node name="SpecialEventsPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 171.0
offset_top = 517.0
offset_right = 428.0
offset_bottom = 834.0

[node name="CenterContainer" type="CenterContainer" parent="SpecialEventsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -50.5
offset_right = 79.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SpecialEventsPanel/CenterContainer"]
layout_mode = 2

[node name="TheStrangerBtn" type="Button" parent="SpecialEventsPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "The Stranger"

[node name="SpankingBtn" type="Button" parent="SpecialEventsPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "A Good Spanking (LWD 10+)"

[node name="JoshBtn" type="Button" parent="SpecialEventsPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Meeting Josh (LWD 20+)"

[node name="TitsOutBtn" type="Button" parent="SpecialEventsPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Exposed (LWD 30+)"

[node name="BaldBtn" type="Button" parent="SpecialEventsPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "The Bald Man (LWD 40+)"

[node name="DougFucksBtn" type="Button" parent="SpecialEventsPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Doug Daniels (LWD 50+)"

[node name="FrederickBtn" type="Button" parent="SpecialEventsPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "A Chance Encounter  (LWD 60+)"

[node name="NikoBtn" type="Button" parent="SpecialEventsPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "The Russian (LWD 80+)"

[node name="KateBtn" type="Button" parent="SpecialEventsPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "A Pretty Little Thing (LWD 100+)"

[connection signal="pressed" from="RandomClientBtn" to="." method="_on_random_client_btn_pressed"]
[connection signal="pressed" from="SpecialEventsBtn" to="." method="_on_special_events_btn_pressed"]
[connection signal="pressed" from="SpecialEventsPanel/CenterContainer/VBoxContainer/TheStrangerBtn" to="." method="_on_the_stranger_btn_pressed"]
[connection signal="pressed" from="SpecialEventsPanel/CenterContainer/VBoxContainer/SpankingBtn" to="." method="_on_spanking_btn_pressed"]
[connection signal="pressed" from="SpecialEventsPanel/CenterContainer/VBoxContainer/JoshBtn" to="." method="_on_josh_btn_pressed"]
[connection signal="pressed" from="SpecialEventsPanel/CenterContainer/VBoxContainer/TitsOutBtn" to="." method="_on_tits_out_btn_pressed"]
[connection signal="pressed" from="SpecialEventsPanel/CenterContainer/VBoxContainer/BaldBtn" to="." method="_on_bald_btn_pressed"]
[connection signal="pressed" from="SpecialEventsPanel/CenterContainer/VBoxContainer/DougFucksBtn" to="." method="_on_doug_fucks_btn_pressed"]
[connection signal="pressed" from="SpecialEventsPanel/CenterContainer/VBoxContainer/FrederickBtn" to="." method="_on_frederick_btn_pressed"]
[connection signal="pressed" from="SpecialEventsPanel/CenterContainer/VBoxContainer/NikoBtn" to="." method="_on_niko_btn_pressed"]
[connection signal="pressed" from="SpecialEventsPanel/CenterContainer/VBoxContainer/KateBtn" to="." method="_on_kate_btn_pressed"]
